# PicoCalcMSX

./: .gitignore  CMakeLists.txt  LICENSE  PicoCalcMSX.c  README.md  audio_hdmi.c  audio_hdmi.h  diskio.c  flash_stage.c  flash_stage.h  main_pico.c  menu.c  menu.h  sd_spi.c  sd_spi.h  storage.h  storage_pico.c  tusb_config.h  usbkbd.c  usbkbd.h  video_hstx.c  video_hstx.h
docs/: MSX2-PORT-PLAN.md  V9938-MAME-DIFF.md
emu/: diskrom.c  konami-mega-rom-scc.c  konami-mega-rom-scc.h  machine.c  machine.h  mapper.c  mapper.h  rtc.c  sccplus.c  sccplus.h  slots.c  subslots.c  tms9918.c  v9938.c  v9938.h  wd2793.c
sdl/: CMakeLists.txt  main_sdl.c  storage_host.c
sdl/cmake/: FindSDL2.cmake
sdl/compat/: pico.h
tests/: v9938_cmd_test.c
